Fix the wish-hbd wrap and size of uyen-nhi

--- a/style/style.css
+++ b/style/style.css
@@ -124,7 +124,7 @@ body {
 
 .six img {
     display: inline-block;
-    max-width: 45%;
+    max-width: 69%;
     height: auto;
 }
 
@@ -292,7 +292,7 @@ body {
     }
 
     .wish-hbd {
-        font-size: 2.3em;
+        font-size: 2em;
     }
 
     .wish h5 {
